--- a/Mine/Mine/Views/Game/GamePage.xaml
+++ b/Mine/Mine/Views/Game/GamePage.xaml
@@ -4,5 +4,9 @@
         <Label Text="Welcome to my Homework" FontSize="Large" />
         <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Seattle_Redhawks_logo.svg/914px-Seattle_Redhawks_logo.svg.png
 " WidthRequest="200" HeightRequest="200" />
+         <Button
+             Clicked="GameButton_Clicked"
+             Text="Go Redhawks"
+             />
      </StackLayout>
 </ContentPage>
