--- a/Mine/Mine/Views/NewItemPage.xaml
+++ b/Mine/Mine/Views/NewItemPage.xaml
@@ -6,19 +6,28 @@
              mc:Ignorable="d"
              x:Class="Mine.Views.NewItemPage"
              Title="New Item">
-    
+
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
         <ToolbarItem Text="Save" Clicked="Save_Clicked" />
     </ContentPage.ToolbarItems>
-    
+
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
             <Label Text="Text" FontSize="Medium" />
             <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
+
             <Label Text="Description" FontSize="Medium" />
             <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
+
+            <Label Text="Value" FontSize="Medium" />
+            <StackLayout Orientation="Horizontal">
+
+                <Stepper Value="{Binding Item.Value, Mode=TwoWay}" Minimum="0" Maximum="10" Increment="1" ValueChanged="Value_OnStepperValueChange"/>
+                <Label x:Name="ValueValue" Text="{Binding Item.Value}" FontSize="Medium" />
+
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
-    
+
 </ContentPage>
