--- a/Mine/Mine/Views/Items/ItemUpdatePage.xaml
+++ b/Mine/Mine/Views/Items/ItemUpdatePage.xaml
@@ -5,11 +5,29 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="Mine.Views.ItemUpdatePage"
-             Title="Update Item">
+             Title="New Item">
 
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
+        <ToolbarItem Text="Update" Clicked="Update_Clicked" />
+    </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
+        <StackLayout Spacing="20" Padding="15">
+            <Label Text="Text" FontSize="Medium" />
+            <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
 
+            <Label Text="Description" FontSize="Medium" />
+            <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
+
+            <Label Text="Value" FontSize="Medium" />
+            <StackLayout Orientation="Horizontal">
+
+                <Stepper Value="{Binding Item.Value, Mode=TwoWay}" Minimum="0" Maximum="10" Increment="1" ValueChanged="Value_OnStepperValueChange"/>
+                <Label x:Name="ValueValue" Text="{Binding Item.Value}" FontSize="Medium" />
+
+            </StackLayout>
+        </StackLayout>
     </ContentPage.Content>
 
 </ContentPage>
