--- a/Mine/Mine/Views/Items/ItemUpdatePage.xaml
+++ b/Mine/Mine/Views/Items/ItemUpdatePage.xaml
@@ -9,7 +9,7 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Canel" Clicked="Cancel_Clicked" IconImageSource="icon_cancel.png"/>
-        <ToolbarItem Text="Update" Clicked="UpdateItem_Clicked" IconImageSource="icon_update.png"/>
+        <ToolbarItem Text="Update" Clicked="Update_Clicked" IconImageSource="icon_update.png"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
